# waken-wa-reporter

./: .gitignore  README.md  README_EN.md  go.mod  index.html  main.go  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ios-ci.yml  reporter-go.yml  tauri-ci.yml
docs/: backend-i18n.en.md  backend-i18n.md  configuration.en.md  configuration.md  development.en.md  development.md  linux-wayland-foreground-bridge.en.md  linux-wayland-foreground-bridge.md
internal/activity/: client.go  types.go
internal/cliutil/: approval_banner.go
internal/config/: file.go  resolve.go  types.go
internal/platform/darwin/: frontmost.go
internal/platform/foreground/: snapshot.go  snapshot_darwin.go  snapshot_darwin_test.go  snapshot_stub.go  snapshot_stub_test.go  snapshot_windows.go  snapshot_windows_test.go
internal/platform/win32/: exe_path.go  user32.go
mobile/android/autojs/: waken-wa-activity.js
scripts/: build-ios-unsigned.sh  prepare-mediaremote-adapter.mjs
src/: App.vue  main.ts  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.ci.json  tauri.conf.json
src-tauri/capabilities/: android-barcode-scanner.json  android-notification.json  default.json  desktop-autostart.json  desktop-deep-link.json  desktop-updater.json
src-tauri/icons/: icon.icns
src-tauri/resources/android/: proguard-rules.pro
src-tauri/resources/mediaremote-adapter/: .gitkeep
src-tauri/src/: backend_locale.rs  commands.rs  discord_presence.rs  http_client.rs  import_config.rs  lib.rs  main.rs  models.rs  realtime_reporter.rs  reporter_config.rs  runtime_utils.rs  state_store.rs  tray.rs
src-tauri/src/commands/: app_state.rs  helpers.rs  http.rs  platform.rs  runtime.rs
src-tauri/src/discord_presence/: feed.rs  ipc.rs  messages.rs
src-tauri/src/platform/: android.rs  linux.rs  macos.rs  macos_bridge.h  macos_bridge.m  mod.rs  stub.rs  windows.rs
src-tauri/src/platform/linux/: app_icon.rs  command.rs  media.rs  self_test.rs  wayland.rs  x11.rs
src-tauri/src/platform/macos/: bridge.rs  command.rs  media.rs  self_test.rs
src-tauri/src/realtime_reporter/: logging.rs  messages.rs  payload.rs
src/app/: AppShell.vue  types.ts
src/app/components/: AppSidebar.vue  MobileTabbar.vue  OnboardingDialog.vue  PendingApprovalDialog.vue  PendingSaveFloat.vue
src/components/: ActivityWorkspace.vue  ConnectionPanel.vue  InspirationWorkspace.vue  LexicalEditor.vue  LexicalEditorSurface.vue  OverviewWorkspace.vue  RealtimeWorkspace.vue  SettingsWorkspace.vue
src/i18n/: index.ts  messages.ts
src/lib/: api.ts  battery.ts  dateTime.ts  deepLinkImport.ts  deviceInfo.ts  inspirationRichText.ts  localizedText.ts  notify.ts  persistence.ts  reporterLogText.ts  reporterTimingValidation.ts
src/stores/: inspirationDraft.ts
src/theme/: primePreset.ts
(+84 files in other folders)
